# Risk-Management

./: .env.example  .gitignore  CONFIGURATION_SUMMARY.md  MVP_COMPLETE.md  QUICK_REFERENCE.md  Threat Catalogue.txt  amplify.yml  architectureoverview.md  ci_jobs.json  cluster_req.json  cors.json  docker-compose.test.yml  docker-compose.yaml  e2e_phases1to4_test.ps1  e2e_supply_chain_test.ps1  e2e_test.ps1  e2e_user_journey_test.ps1  lambda-self-invoke-policy.json  pyproject.toml  response.json  run_migrations.py  tactics.json  test_bedrock_access.json  test_recommendation_save.ps1  test_recommendation_save.py  test_recommendation_save.sh  tue_feb_03_2026_testing_guide_for_compliance_platform_with.json  whitepaper.md
.github/: README.md  copilot-instructions.md
backend/: .flake8  pytest.ini  requirements-dev.txt  run_migrations.py
compliance-platform-mvp/: .gitignore  INDEX.md  README.md  SESSION_18_SUMMARY.md  SETUP_GUIDE.md  TESTING_AND_CICD_SETUP.md  amplify.yml  check_logs.py  check_tables.py  debug_alembic.py  detailed_migration.py  encode_password.py  migration-payload.json  pyproject.toml  run_migrations_direct.py  run_migrations_verbose.py  seed_test_data.py  test_migration.py  verify_database.py
docker/: Dockerfile
docs/: AWS_MANUAL_SETUP_GUIDE.md  CICD_PIPELINE.md  POST_DEPLOYMENT_GUIDE.md  QUICK_START.md
e2e-tests/: package.json
frontend/: Dockerfile  README.md  amplify.yml  next.config.js  package-lock.json  package.json  tailwind.config.ts
infra/: main.tf  ml_microservice.tf
lambda-current/: _zip.py
sample-data/: assessment-input.md  (+3 more)
(+184 files in other folders)
